// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot testing should render heart button when oneImage is true 1`] = `
<div
  className="flex justify-center"
>
  <div
    className="flex"
  >
    <button
      className="dislike group"
      type="button"
    >
      <svg
        className="fill-error stroke-current stroke-1 text-white group-hover:fill-white"
        data-file-name="SvgFilledDislike"
      />
    </button>
    <button
      className="like group"
      type="button"
    >
      <svg
        className="fill-primary stroke-current stroke-1 text-white group-hover:fill-white"
        data-file-name="SvgFilledLike"
      />
    </button>
  </div>
</div>
`;

exports[`snapshot testing should render two buttons when oneImage is true 1`] = `
<div
  className="flex justify-center"
>
  <button
    className="love group"
    type="button"
  >
    <svg
      className="fill-primary stroke-current stroke-2 text-white group-hover:fill-white"
      data-file-name="SvgFilledHeart"
    />
  </button>
</div>
`;
